--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <title>Playing with CSS By JS</title>
-        <style type="text/css">
-            body{
-                width: 960px;
-                margin: 0px;
-                margin: 0 auto;
-                background : #9595e2;
-            }
-            main{
-                text-align: center;
-            }
-        </style>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="src/css/main.css">
+        <link rel="stylesheet" href="src/css/input-elements.css">
+        <link rel="stylesheet" href="src/css/new-selectors.css">
+        <title>JS, CSS & HTML</title>
     </head>
     <body>
         <main>
-            <h1>This is FADILXCODER</h1>
-            <p>The Ghost Who Codes !!!</p>
+            <h1>JS & HTML</h1>
+            <h3>Frontend Developer</h3>
+            <h4>Hello World II</h4>
+            <h3>@fadilxcoder</h3>
+            <h4>Hello World III</h4>
+            <h4 class="foo">Hello World IV</h4>
+            <ul>
+                <li>
+                    <a href="https://www.failxcoder.developer">https://www.failxcoder.developer</a>
+                </li>
+                <li>
+                    <a href="http://any-document-name.pdf">http://any-document-name.pdf</a>
+                </li>
+                <li>
+                    <p title="Is an example">Is an example</p>
+                </li>
+                <li>
+                    <p title="This is Sparta">This is Sparta</p>
+                </li>
+            </ul>
+            <form></form>
+            <form>
+                <input type="text" placeholder="This is an input tag.."/><br>
+                <input type="text" placeholder="This is anothter input tag.." disabled/><br>
+            </form>
+            <button id="click-btn">SHOW IT !</button>
+            <p id="the-paragraph">Whatever psychedelic you take Or whether you've just been around the sun a few times You know that we are in the midst of a tremendous mystery The great mystery We don't know what happens when we die We might think we know what's going on now But we have barely a clue of what's really happening I like to call it the great mystery So in the midst of this great mystery We are getting a certain drip, drip, drip of DMT In our neural-electro-psycho-spiritual system And it may be allowing us to have a certain window on reality</p>
         </main>
+        <script src="src/js/dom-loader.js"></script>
+        <script src="src/js/app.js"></script>
     </body>
-    <script type="text/javascript">
-        document.getElementsByTagName("h1")[0].style.fontSize = "50px";
-        document.getElementsByTagName("h1")[0].style.color = "cyan";
-        document.getElementsByTagName("p")[0].style.fontWeight = "bold";
-        document.getElementsByTagName("p")[0].style.padding = "20px";
-        document.getElementsByTagName("p")[0].style.backgroundColor = "#FFF";
-    </script>
 </html>
