--- a/index.html
+++ b/index.html
@@ -39,5 +39,15 @@
         </main>
         <script src="src/js/dom-loader.js"></script>
         <script src="src/js/app.js"></script>
+        <script>
+            const styles = [
+                'color: #4dbb63', 
+                'background: #999588', 
+                'font-size: 20px',
+                'text-shadow: 2px 2px #615e57',
+                'padding: 5px',
+            ].join(';');
+            console.log('%cFADILXCODER', styles);
+        </script>
     </body>
 </html>
